Use HTTPClient that's included in the JDK